--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "scripts": {
     "serve": "cross-env branch_env=dev vue-cli-service serve",
-		"build": "cross-env branch_env=dev vue-cli-service build",
-		"t-build": "cross-env branch_env=test vue-cli-service build",
-		"r-build": "cross-env branch_env=rd vue-cli-service build",
-		"p-build": "cross-env branch_env=pro vue-cli-service build",
+    "build": "cross-env branch_env=dev vue-cli-service build",
+    "t-build": "cross-env branch_env=test vue-cli-service build",
+    "r-build": "cross-env branch_env=rd vue-cli-service build",
+    "p-build": "cross-env branch_env=pro vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -15,6 +15,7 @@
     "core-js": "^3.6.5",
     "cross-env": "^7.0.2",
     "dayjs": "^1.9.6",
+    "js-cookie": "^2.2.1",
     "lib-flexible": "^0.3.2",
     "postcss-px2rem": "^0.3.0",
     "register-service-worker": "^1.7.1",
@@ -42,5 +43,19 @@
     "sass-loader": "^9.0.2",
     "typescript": "~3.9.7",
     "vue-cli-plugin-vue-next": "~0.1.3"
-  }
+	},
+	"browserslist": {
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version",
+			"last 1 ie version"
+		],
+		"production": [
+			">1%",
+			"last 4 versions",
+			"Firefox ESR",
+			"not ie < 9"
+		]
+	}
 }
