--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "core-js": "^3.6.5",
     "cross-env": "^7.0.2",
     "dayjs": "^1.9.6",
+    "duia-wapui": "0.0.42",
     "js-cookie": "^2.2.1",
     "lib-flexible": "^0.3.2",
     "postcss-px2rem": "^0.3.0",
     "register-service-worker": "^1.7.1",
+    "vant": "^3.0.3",
     "vue": "^v3.0.0-rc.1",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.0.0",
@@ -43,19 +45,19 @@
     "sass-loader": "^9.0.2",
     "typescript": "~3.9.7",
     "vue-cli-plugin-vue-next": "~0.1.3"
-	},
-	"browserslist": {
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version",
-			"last 1 ie version"
-		],
-		"production": [
-			">1%",
-			"last 4 versions",
-			"Firefox ESR",
-			"not ie < 9"
-		]
-	}
+  },
+  "browserslist": {
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version",
+      "last 1 ie version"
+    ],
+    "production": [
+      ">1%",
+      "last 4 versions",
+      "Firefox ESR",
+      "not ie < 9"
+    ]
+  }
 }
